--- a/lab/MailCat/MailCat/Base.lproj/Main.storyboard
+++ b/lab/MailCat/MailCat/Base.lproj/Main.storyboard
@@ -200,6 +200,7 @@
                                             <outlet property="clipContentLabel" destination="z4a-33-4O4" id="JhK-Y5-Z5l"/>
                                             <outlet property="senderMailLabel" destination="hKr-3B-wVC" id="XjA-MF-QT0"/>
                                             <outlet property="timeNeededLabel" destination="JOa-Cy-0So" id="g01-2c-ph7"/>
+                                            <segue destination="i1I-OF-8xm" kind="showDetail" id="Z9S-28-tih"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -289,7 +290,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="292" y="-1330"/>
+            <point key="canvasLocation" x="-520" y="271"/>
         </scene>
         <!--Entrance View Controller-->
         <scene sceneID="Yfr-hD-jre">
@@ -500,7 +501,7 @@
                                     <action selector="pickReceiverCity:" destination="Xpg-pt-r3t" eventType="touchUpInside" id="IVF-Yt-Lvj"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="name@example.com" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0b9-Lr-BaI">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="lanstonpeng@gmail.com" placeholder="name@example.com" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0b9-Lr-BaI">
                                 <rect key="frame" x="175" y="205" width="199" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="eKQ-0T-rPr"/>
@@ -630,7 +631,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" text="这里是信件正文" translatesAutoresizingMaskIntoConstraints="NO" id="1fy-mq-99t">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" text="这里是信件正文这里是信件正文这里是信件正文这里是信件正文这里是信件正文这里是信件正文这里是信件正文" translatesAutoresizingMaskIntoConstraints="NO" id="1fy-mq-99t">
                                 <rect key="frame" x="38" y="103" width="524" height="413"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="419" id="2jS-nC-DSq"/>
@@ -671,7 +672,7 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="称谓:" adjustsFontSizeToFit="NO" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="PhN-9q-sfW">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="称谓咯:" placeholder="称谓:" adjustsFontSizeToFit="NO" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="PhN-9q-sfW">
                                 <rect key="frame" x="16" y="60" width="114" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="114" id="JNd-Wu-oOg"/>
@@ -970,4 +971,7 @@
         <image name="ok" width="26" height="21"/>
         <image name="selectedBtn" width="16" height="25"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="d6D-TQ-rxa"/>
+    </inferredMetricsTieBreakers>
 </document>
